--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <a href="./index.html">WebStudio</a>
   <nav>
     <ul>
-      <li><a href="./index.html">Studio</a></li>
-      <li><a href="./index.html">Portfolio</a></li>
-      <li><a href="./index.html">Contacts</a></li>
+      <li><a href="">Studio</a></li>
+      <li><a href="">Portfolio</a></li>
+      <li><a href="">Contacts</a></li>
     </ul>
   </nav>
   <address>
@@ -58,18 +58,29 @@
       <h2>Our Team</h2>
       <ul>
         <li><img src="images/img team 1.jpg" alt="Mark Guerrero">
-          <h3>Mark Guerrero</h3><br>Product Designer
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
         </li>
-        <li><img src="images/img team 2.jpg" alt="Tom Ford">Tom Ford<p></p> Developer</li>
-        <li><img src="images/img team 3.jpg" alt="Camila Garcia">Camila Garcia<br>Marketing</li>
-        <li><img src="images/img team 4.jpg" alt="Daniel Wilson">Daniel Wilson<br>UI Designer</li>
+        <li><img src="images/img team 2.jpg" alt="Tom Ford">
+          <h3>Tom Ford</h3>
+          <p>Developer</p>
+        </li>
+        <li><img src="images/img team 3.jpg" alt="Camila Garcia">
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li><img src="images/img team 4.jpg" alt="Daniel Wilson">
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
       </ul>
     </section>
   </main>
   <footer>
     <ul>
       <li>
-        <p>WebStudio</p>
+        <a href="">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </li>
     </ul>
   </footer>
