--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-  <a href="./index.html">WebStudio</a>
-  <nav>
-    <ul>
-      <li><a href="">Studio</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contacts</a></li>
-    </ul>
-  </nav>
-  <address>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a></br>
-    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></br>
-  </address>
+  <header>
+    <a href="./index.html">WebStudio</a>
+    <nav>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
+    </nav>
+    <address>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a></br>
+      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></br>
+    </address>
   </header>
   <main>
     <h1>Effective Solutions for Your Business</h1>
