--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a></br>
-      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></br>
+      <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a></br>
     </address>
   </header>
   <main>
@@ -50,27 +50,27 @@
     <section>
       <h2>What are we doing</h2>
       <ul>
-        <li><img src="images/img 1.jpg" alt="compute" width="360" heigh="300"></li>
-        <li><img src="images/img 2.jpg" alt="messenger" width="360" heigh="300"></li>
-        <li><img src="images/img 3.jpg" ali="phone" width="360" heigh="300"></li>
+        <li><img src="images/img1.jpg" alt="compute" width="360" heigh="300"></li>
+        <li><img src="images/img2.jpg" alt="messenger" width="360" heigh="300"></li>
+        <li><img src="images/img3.jpg" ali="phone" width="360" heigh="300"></li>
       </ul>
     </section>
     <section>
       <h2>Our Team</h2>
       <ul>
-        <li><img src="images/img team 1.jpg" alt="Mark Guerrero">
+        <li><img src="images/img-team1.jpg" alt="Mark Guerrero">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
-        <li><img src="images/img team 2.jpg" alt="Tom Ford">
+        <li><img src="images/img-team2.jpg" alt="Tom Ford">
           <h3>Tom Ford</h3>
           <p>Developer</p>
         </li>
-        <li><img src="images/img team 3.jpg" alt="Camila Garcia">
+        <li><img src="images/img-team3.jpg" alt="Camila Garcia">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
-        <li><img src="images/img team 4.jpg" alt="Daniel Wilson">
+        <li><img src="images/img-team4.jpg" alt="Daniel Wilson">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
