--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <section>
       <h2>What are we doing</h2>
       <ul>
-        <li><img src="images/img1.jpg" alt="compute" width="360" heigh="300"></li>
-        <li><img src="images/img2.jpg" alt="messenger" width="360" heigh="300"></li>
-        <li><img src="images/img3.jpg" ali="phone" width="360" heigh="300"></li>
+        <li><img src="images/img1.jpg" alt="compute" width="360" height="300"></li>
+        <li><img src="images/img2.jpg" alt="messenger" width="360" height="300"></li>
+        <li><img src="images/img3.jpg" ali="phone" width="360" height="300"></li>
       </ul>
     </section>
     <section>
