--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul>
         <li><img src="images/img1.jpg" alt="compute" width="360" height="300"></li>
         <li><img src="images/img2.jpg" alt="messenger" width="360" height="300"></li>
-        <li><img src="images/img3.jpg" ali="phone" width="360" height="300"></li>
+        <li><img src="images/img3.jpg" alt="phone" width="360" height="300"></li>
       </ul>
     </section>
     <section>
