--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </ul>
     </nav>
     <address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</br></a>
-      <a href="tel:+11(000)111-11-11">+11(000)111-11-11</br></a>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+      <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
     </address>
   </header>
   <main>
