--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <header>
-    <a href="./index.html">WebStudio</a>
     <nav>
+      <a href="./index.html">WebStudio</a>
       <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
@@ -19,13 +19,17 @@
       </ul>
     </nav>
     <address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-      <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+11(000)111-11-11">+11(000)111-11-11</li>
+      </ul>
     </address>
   </header>
   <main>
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
+    <section>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </section>
     <section>
       <ul>
         <li>
