--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </main>
   <footer>
     <a href="">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
   </footer>
 </body>
 
