--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
     <section>
       <h2>What are we doing</h2>
       <ul>
-        <li><img src="images/img1.jpg" alt="compute" width="360" height="300"></li>
-        <li><img src="images/img2.jpg" alt="messenger" width="360" height="300"></li>
-        <li><img src="images/img3.jpg" alt="phone" width="360" height="300"></li>
+        <li><img src="./images/img1.jpg" alt="compute" width="360" height="300"></li>
+        <li><img src="./images/img2.jpg" alt="messenger" width="360" height="300"></li>
+        <li><img src="./images/img3.jpg" alt="phone" width="360" height="300"></li>
       </ul>
     </section>
     <section>
       <h2>Our Team</h2>
       <ul>
-        <li><img src="images/img-team1.jpg" alt="Mark Guerrero" width="264px" height="260">
+        <li><img src="./images/img-team1.jpg" alt="Mark Guerrero" width="264px" height="260">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
-        <li><img src="images/img-team2.jpg" alt="Tom Ford" width="264px" height="260">
+        <li><img src="./images/img-team2.jpg" alt="Tom Ford" width="264px" height="260">
           <h3>Tom Ford</h3>
           <p>Developer</p>
         </li>
-        <li><img src="images/img-team3.jpg" alt="Camila Garcia" width="264px" height="260">
+        <li><img src="./images/img-team3.jpg" alt="Camila Garcia" width="264px" height="260">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
-        <li><img src="images/img-team4.jpg" alt="Daniel Wilson" width="264px" height="260">
+        <li><img src="./images/img-team4.jpg" alt="Daniel Wilson" width="264px" height="260">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
