--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </ul>
     </section>
     <section>
-      <h2>What Are We Doing</h2>
+      <h2>What are we doing</h2>
       <ul>
         <li><img src="./images/img1.jpg" alt="compute" width="360" height="300"></li>
         <li><img src="./images/img2.jpg" alt="messenger" width="360" height="300"></li>
