--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button type="button">Order Service</button>
     </section>
     <section>
-      <h2></h2>
+      <h2 hidden>Target</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
